move text to foreground, add spacing, add thunderclap sound

--- a/Group Project/Thor'sEnemies.html
+++ b/Group Project/Thor'sEnemies.html
@@ -11,8 +11,10 @@
   <canvas id="canvas1"></canvas>
   <canvas id="canvas2"></canvas>
   <canvas id="canvas3"></canvas>
-<br><h1 class="h1"><center>THOR'S ENEMIES</center></h1>
-<br><h3 class="h3"><center>It's often said that a superhero is only as good as their Rogues gallery,<br> and much to his credit, the God of Thunder is no exception. Here's an ordered list of the most notorious,<br>deadly, evil, re-occuring, and just down right mean characters to ever match metal with the Mighty Thor.</center></h3>
+  <div class="layer2">
+    <br><h1 class="h1">THOR'S ENEMIES</h1>
+    <br><h3 class="h3">It's often said that a superhero is only as good as their Rogues gallery,<br> and much to his credit, the God of Thunder is no exception. Here's an ordered list of the most notorious,<br>deadly, evil, re-occuring, and just down right mean characters to ever match metal with the Mighty Thor.</h3>
+  </div><br><br>
   <div class="flex-parent">
     <div class="card flex-child">
       <img src="Ares.jpg" alt="Ares" width="100%">
@@ -86,7 +88,13 @@
     </div>
   </div>
 
-<script type="text/javascript" src="lightning1.js"></script>
+  <div class="layer2">
+    <audio controls src="ThunderClap.mp3" autoplay loop>
+      Your browser does not support the <code>audio</code> element.
+    </audio>
+  </div>
+
+  <script type="text/javascript" src="lightning1.js"></script>
 
 </body>
 </html>
